Update: assests images for the six products

--- a/react-shopping-store-sara/src/index.css
+++ b/react-shopping-store-sara/src/index.css
@@ -56,3 +56,16 @@ footer{
 .sidebar{
   flex: 1 20rem;
 }
+
+/* products */
+.products{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+  flex-wrap: wrap;
+  width: 45rem;
+  height: 45rem;
+}
