--- a/react-shopping-store-sara/src/index.css
+++ b/react-shopping-store-sara/src/index.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
+
 html {
   font-size: 62.5%;
   box-sizing: border-box
@@ -7,9 +9,9 @@ body, #root {
   margin: 0;
 }
 
-body, input, select, textarea{
+body, input, select, button, textarea{
   font-size: 1.6rem;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Montserrat, Arial, Helvetica, sans-serif;
 }
 
 .grid-container{
@@ -18,6 +20,9 @@ body, input, select, textarea{
   grid-template-rows: 5rem 1fr 5rem;
   grid-template-columns: 1fr;
   height: 100%;
+}
+a{
+  text-decoration: none;
 }
 a:hover {
   color: #ff8000;
@@ -68,4 +73,41 @@ footer{
   flex-wrap: wrap;
   width: 45rem;
   height: 45rem;
+}
+.products li {
+  flex: 0 1 29rem;
+  height: 47rem;
+  padding: 1rem;
+}
+.product{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+}
+.product img{
+  max-width: 37rem;
+  max-height: 37rem;
+}
+.product-price{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.product-price div,
+.product-price button {
+  text-align: center;
+  flex: 1;
+}
+.product-price div{
+  font-size: 2rem;
+}
+.button{
+  padding: 1rem;
+  border: .1rem #c0c0c0 solid;
+  background-color: #f0f0f0;
+  cursor: pointer;
+}
+.button.primary{
+  background-color: #f0c040;
 }
