Fix: component filter top bar

--- a/react-shopping-store-sara/src/index.css
+++ b/react-shopping-store-sara/src/index.css
@@ -63,7 +63,7 @@ footer{
 }
 
 /* products */
-.products{
+.products ul {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -79,7 +79,7 @@ footer{
   height: 47rem;
   padding: 1rem;
 }
-.product{
+.product div {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -110,4 +110,15 @@ footer{
 }
 .button.primary{
   background-color: #f0c040;
+}
+/* Filter*/
+.filter {
+  display: flex;
+  padding: 1rem;
+  margin: 1rem;
+  justify-content: space-between;
+  border-bottom: 0.1rem #c0c0c0 solid;
+}
+.filter div {
+  flex: 1;
 }
